--- a/internal/cligen/templates/main.go.tmpl
+++ b/internal/cligen/templates/main.go.tmpl
@@ -29,6 +29,7 @@ func new{{.Command.Method}}({{.Runtime.Name}} {{.Runtime.Type}}) *cobra.Command 
 				return fmt.Errorf("failed to create a client for {{.Command.Api}}.{{.Command.ApiVersion}}: %w", err)
 			}
 			res, err := c.{{.Command.Method}}(ctx, &{{.Command.Request.Type}}{
+{{.Command.Request | ToFields 4}}
 			})
 			if err != nil {
 				return fmt.Errorf("{{.Command.Api}}.{{.Command.ApiVersion}}: failed to {{.Command.Method}}: %w", err)
