--- a/internal/cligen/templates/main.go.tmpl
+++ b/internal/cligen/templates/main.go.tmpl
@@ -28,12 +28,8 @@ func new{{.Command.Method}}({{.Runtime.Name}} {{.Runtime.Type}}) *cobra.Command 
 			if err != nil {
 				return fmt.Errorf("failed to create a client for {{.Command.Api}}.{{.Command.ApiVersion}}: %w", err)
 			}
-			res, err := c.{{.Command.Method}}(ctx, &{{.Command.ApiVersion}}.{{.Command.Method}}Request{
-				{{.Command.CreateResourceId}}: &{{.Command.CreateResource.Type}}{
-{{- range .Command.CreateResource.Fields}}
-					{{.Id}}: {{.FlagName}},
-{{- end}}
-				},
+			res, err := c.{{.Command.Method}}(ctx, &{{.Command.Request.Type}}{
+{{.Command.Request | ToFields 4}}
 			})
 			if err != nil {
 				return fmt.Errorf("{{.Command.Api}}.{{.Command.ApiVersion}}: failed to {{.Command.Method}}: %w", err)
