--- a/internal/servergen/templates/main.go.tmpl
+++ b/internal/servergen/templates/main.go.tmpl
@@ -40,8 +40,8 @@ func NewService(logger *zap.Logger, rt runtime) *service {
 	// standard create method
 	res, err := s.rt.Create(ctx, req.{{.GetResourceMethod}}())
 	if err != nil {
-		logger.Error("failed to create resource", zap.Error(err))
-		return nil, status.Error(codes.Internal, "internal error")
+		logger.Error("unknown error", zap.Error(err))
+		return nil, status.Error(codes.Unknown, "unknown error")
 	}
 	return res, nil
 {{- else}}
