--- a/internal/servergen/templates/main.go.tmpl
+++ b/internal/servergen/templates/main.go.tmpl
@@ -3,7 +3,6 @@ package {{.Service.ApiVersion}}
 
 import (
 	"context"
-	"errors"
 )
 
 import (
@@ -45,15 +44,7 @@ func (s *service) {{.Name}}(ctx context.Context, req *{{.RequestType}}) (*{{.Res
 {{- else if eq .MethodType 2}}
 	res, err := s.rt.Get(ctx, req.GetName())
 {{- end}}
-	if errors.Is(err, app.ErrInvalidArgument) {
-		logger.Error("invalid argument", zap.Error(err))
-		return nil, status.Error(codes.InvalidArgument, err.Error())
-	}
-	if err != nil {
-		logger.Error("unknown error", zap.Error(err))
-		return nil, status.Error(codes.Unknown, "unknown error")
-	}
-	return res, nil
+	return helper.ErrorOr(logger, res, err)
 }
 
 {{end}}
