--- a/internal/servergen/templates/main.go.tmpl
+++ b/internal/servergen/templates/main.go.tmpl
@@ -11,7 +11,7 @@ import (
 {{- end}}
 )
 
-{{if .EnableMock}}//go:generate mockgen -source=$GOFILE -package=mock$GOPACKAGE -destination=mock/$GOFILE{{end}}
+{{if .EnableMock}}//go:generate go run -mod=mod github.com/golang/mock/mockgen -source=$GOFILE -package=mock$GOPACKAGE -destination=mock/$GOFILE{{end}}
 type runtime interface {
 {{- range .Service.Calls}}
 {{- if eq .MethodType 1}}
