--- a/internal/servergen/templates/main.go.tmpl
+++ b/internal/servergen/templates/main.go.tmpl
@@ -22,6 +22,8 @@ type runtime interface {
 	Delete(ctx context.Context, name string) (*{{.ResponseType}}, error)
 {{- else if eq .MethodType 4}}
 	List(ctx context.Context, pageSize int32, page *v1.Pagination) ([]*{{.ResourceType}}, *v1.Pagination, error)
+{{- else if eq .MethodType 5}}
+	Update(ctx context.Context, resource *{{.ResourceType}}, mask *fieldmaskpb.FieldMask) (*{{.ResourceType}}, error)
 {{- end}}
 {{- end}}
 }
@@ -66,6 +68,8 @@ func (s *service) {{.Name}}(ctx context.Context, req *{{.RequestType}}) (*{{.Res
 		{{.ListField}}: resources,
 		NextPageToken: token,
 	}
+{{- else if eq .MethodType 5}}
+	res, err := s.rt.Update(ctx, req.{{.GetResourceMethod}}(), req.GetUpdateMask())
 {{- end}}
 	return helper.ErrorOr(logger, res, err)
 }
